--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
                         <li><a href="cheetah.html">Cheetah</a></li>
                         <li><a href="elephant.html">Elephant</a></li>
                         <li><a href="hyena.html">Hyena</a></li>
+                        <li><a href="warthog.html">Warthog</a></li>
+                        <li><a href="dikdik.html">Dikdik</a></li>
+                        <li><a href="white-belly-bird.html">White Belly Bird</a></li>
+                        <li><a href="jackals.html">Jackals</a></li>
+                        <li><a href="foxes.html">Foxes</a></li>
                     </ul>
                 </details>
             </td>
