--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </table>
 
     <!-- Content Section -->
-    <table width="883px" border="1">
+    <table width="883px">
         <tr>
             <td>
                 <img src="https://github.com/PeterEvansNjenga/Web-Class/blob/main/Untitled.jpeg?raw=true" 
