--- a/cheetah.html
+++ b/cheetah.html
@@ -8,7 +8,7 @@
 <body>
 
     <h1>Cheetah</h1>
-    <img src="https://example.com/cheetah.jpg" alt="Cheetah" width="500">
+    <img src="https://github.com/PeterEvansNjenga/Web-Class/blob/main/Cheetah.jpg?raw=true" alt="Cheetah" width="500">
     <p>The cheetah is the fastest land animal, capable of reaching speeds up to 75 mph.</p>
 
     <a href="index.html">Back to Home</a>
