--- a/dikdik.html
+++ b/dikdik.html
@@ -8,7 +8,7 @@
 <body>
 
     <h1>Dikdik</h1>
-    <img src="https://example.com/dikdik.jpg" alt="Dikdik" width="500">
+    <img src="https://github.com/PeterEvansNjenga/Web-Class/blob/main/dik%20dik.jpeg?raw=true" alt="Dikdik" width="500">
     <p>Dikdiks are small antelopes found in Africa, known for their agility.</p>
 
     <a href="index.html">Back to Home</a>
