--- a/warthog.html
+++ b/warthog.html
@@ -8,7 +8,7 @@
 <body>
 
     <h1>Warthog</h1>
-    <img src="https://example.com/warthog.jpg" alt="Warthog" width="500">
+    <img src="https://github.com/PeterEvansNjenga/Web-Class/blob/main/Warthog.jpeg?raw=true" alt="Warthog" width="500">
     <p>Warthogs are wild pigs known for their tusks and burrowing habits.</p>
 
     <a href="index.html">Back to Home</a>
