--- a/white-belly-bird.html
+++ b/white-belly-bird.html
@@ -8,7 +8,7 @@
 <body>
 
     <h1>White Belly Bird</h1>
-    <img src="https://example.com/white-belly-bird.jpg" alt="White Belly Bird" width="500">
+    <img src="https://github.com/PeterEvansNjenga/Web-Class/blob/main/White%20Belly%20Bird.jpeg?raw=true" alt="White Belly Bird" width="500">
     <p>This bird species is known for its distinctive white belly and melodious songs.</p>
 
     <a href="index.html">Back to Home</a>
