--- a/elephant.html
+++ b/elephant.html
@@ -8,7 +8,7 @@
 <body>
 
     <h1>Elephant</h1>
-    <img src="https://example.com/elephant.jpg" alt="Elephant" width="500">
+    <img src="https://github.com/PeterEvansNjenga/Web-Class/blob/main/Elephant.jpeg?raw=true" alt="Elephant" width="500">
     <p>Elephants are the largest land mammals, known for their intelligence and strong social bonds.</p>
 
     <a href="index.html">Back to Home</a>
