--- a/foxes.html
+++ b/foxes.html
@@ -8,7 +8,7 @@
 <body>
 
     <h1>Foxes</h1>
-    <img src="https://example.com/foxes.jpg" alt="Foxes" width="500">
+    <img src="https://github.com/PeterEvansNjenga/Web-Class/blob/main/Foxes.jpeg?raw=true" alt="Foxes" width="500">
     <p>Foxes are small carnivores known for their intelligence and adaptability.</p>
 
     <a href="index.html">Back to Home</a>
