--- a/hyena.html
+++ b/hyena.html
@@ -8,7 +8,7 @@
 <body>
 
     <h1>Hyena</h1>
-    <img src="https://example.com/hyena.jpg" alt="Hyena" width="500">
+    <img src="https://github.com/PeterEvansNjenga/Web-Class/blob/main/hyena.jpeg?raw=true" alt="Hyena" width="500">
     <p>Hyenas are known for their strong jaws and complex social structures.</p>
 
     <a href="index.html">Back to Home</a>
