--- a/jackals.html
+++ b/jackals.html
@@ -8,7 +8,7 @@
 <body>
 
     <h1>Jackals</h1>
-    <img src="https://example.com/jackals.jpg" alt="Jackals" width="500">
+    <img src="https://github.com/PeterEvansNjenga/Web-Class/blob/main/Jackals.jpeg?raw=true" alt="Jackals" width="500">
     <p>Jackals are highly adaptable animals, known for their cunning and speed.</p>
 
     <a href="index.html">Back to Home</a>
