--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
 
     <!-- Navigation Menu -->
-    <table width="883px" border="1">
+    <table width="883px" border="1" cellspacing="0">
         <tr>
             <td><a href="index.html">Home</a></td>
             <td><a href="about.html">About Us</a></td>
@@ -53,7 +53,7 @@
     </table>
 
     <!-- Footer -->
-    <table width="883px" border="1">
+    <table width="883px" border="1" cellspacing="0">
         <tr>
             <td align="center">Contact 0123456789 for more details</td>
         </tr>
